--- a/a_propos.html
+++ b/a_propos.html
@@ -32,7 +32,7 @@
 
         <!-- Bloc du bas -->
         <div class="enbas">
-            <a href="pdf/SIMAO_Laeticia_portfolio.pdf" target="_blank" rel="noopener">CV</a><br>
+            <a href="#" target="_blank" rel="noopener">CV</a><br>
             <a href="mailto:laeticiasimao1@icloud.com">Mail</a><br>
             <a href="#">Portfolio</a>
         </div>
