--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="enbas">
             <a href="#" target="_blank" rel="noopener">CV</a><br>
             <a href="mailto:laeticiasimao1@icloud.com">Mail</a><br>
-            <a href="pdf/SIMAO_Laeticia_portfolio.pdf">Portfolio</a>
+            <a href="#">Portfolio</a>
         </div>
 
     </aside>
